--- a/ProjetoAssistencial.Admin/ProjetoAssistencial.Admin.csproj
+++ b/ProjetoAssistencial.Admin/ProjetoAssistencial.Admin.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="MockFactory\MockFactory.cs" />
     <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\Entidade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
