--- a/ProjetoAssistencial.Admin/Web.config
+++ b/ProjetoAssistencial.Admin/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="conexao" connectionString="Server=CX-SI207-PC6\SQLEXPRESS;Database=ProjetoAssistencial;User Id=sa;Password=ftec;"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
