--- a/ProjetoAssistencial.Admin/Web.config
+++ b/ProjetoAssistencial.Admin/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="conexao" connectionString="Server=CX-SI207-PC6\SQLEXPRESS;Database=ProjetoAssistencial;User Id=sa;Password=ftec;"/>
+    <add name="conexao" connectionString="Server=mssql.uminum.com.br;Database=uminum_plurall;User Id=uminum_plurall;Password=@padrao@123;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
