--- a/ProjetoAssistencial.Cliente/Web.config
+++ b/ProjetoAssistencial.Cliente/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="conexao" connectionString="Server=mssql.uminum.com.br;Database=uminum_plurall;User Id=uminum_plurall;Password=@padrao@123;"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
