--- a/ProjetoAssistencial.Dominio/ProjetoAssistencial.Dominio.csproj
+++ b/ProjetoAssistencial.Dominio/ProjetoAssistencial.Dominio.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Entidade\VoluntarioCategoria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\IAcaoVoluntarioRepositorio.cs" />
+    <Compile Include="Repositorio\IEntidadeRepositorio.cs" />
     <Compile Include="Repositorio\ICategoriaRepositorio.cs" />
     <Compile Include="Repositorio\IDoacaoRepositorio.cs" />
     <Compile Include="Repositorio\IVoluntarioCategoria.cs" />
