--- a/ProjetoAssistencial.Aplicacao/ProjetoAssistencial.Aplicacao.csproj
+++ b/ProjetoAssistencial.Aplicacao/ProjetoAssistencial.Aplicacao.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcaoAplicacao.cs" />
     <Compile Include="Adapter\AcaoAdapter.cs" />
     <Compile Include="Adapter\AcaoVoluntarioAdapter.cs" />
     <Compile Include="Adapter\CategoriaAdapter.cs" />
@@ -58,7 +59,9 @@
     <Compile Include="DTO\EntidadeDTO.cs" />
     <Compile Include="DTO\VoluntarioCategoriaDTO.cs" />
     <Compile Include="DTO\VoluntarioDTO.cs" />
+    <Compile Include="EntidadeAplicacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VoluntarioAplicacao.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjetoAssistencial.Dominio\ProjetoAssistencial.Dominio.csproj">
