--- a/ProjetoAssistencial.Dominio/ProjetoAssistencial.Dominio.csproj
+++ b/ProjetoAssistencial.Dominio/ProjetoAssistencial.Dominio.csproj
@@ -50,11 +50,13 @@
     <Compile Include="Entidade\Voluntario.cs" />
     <Compile Include="Entidade\VoluntarioCategoria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\IAcaoRepositorio.cs" />
     <Compile Include="Repositorio\IAcaoVoluntarioRepositorio.cs" />
     <Compile Include="Repositorio\IEntidadeRepositorio.cs" />
     <Compile Include="Repositorio\ICategoriaRepositorio.cs" />
     <Compile Include="Repositorio\IDoacaoRepositorio.cs" />
     <Compile Include="Repositorio\IVoluntarioCategoria.cs" />
+    <Compile Include="Repositorio\IVoluntarioRepositorio.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
