--- a/ProjetoAssistencial.Repositorio/ProjetoAssistencial.Repositorio.csproj
+++ b/ProjetoAssistencial.Repositorio/ProjetoAssistencial.Repositorio.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DoacaoRepositorio.cs" />
     <Compile Include="CategoriaRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VoluntarioRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjetoAssistencial.Dominio\ProjetoAssistencial.Dominio.csproj">
